src/practice/son/istio-1.22.2/samples/bookinfo/networking/destination-rule-hnginx.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hnginx
spec:
  host: hnginx
  subsets:
    - name: v1
      labels:
        version: v1
