src/practice/son/istio-1.22.2/samples/bookinfo/networking/serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-google
spec:
  hosts:
  - www.google.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
